# OpenGL_Base

./: .desktop  .gitignore  CMakeLists.txt  Notes.md  OPENGL_JOURNEY_EXE_APP  README.md  ReadAndlearnBuild.md  build-mac-arm-only.sh  build-multi.sh  build-run-project.sh  linux-arm64-toolchain.cmake  linux-x86_64-toolchain.cmake  main.cpp  windows-arm64-toolchain.cmake  windows-x86_64-toolchain.cmake
cmake/toolchains/: linux-arm64-toolchain.cmake
docs/: ProjectGuide.md
docs/wiki/: Building-on-Linux.md  Building-on-Windows.md  Building-on-macOS.md  Getting-Started.md  Home.md  Repository-Hygiene.md
icon/: opengl.icns
shaders/: basic.frag  basic.vert
src/: io.hpp
